fixed css for mobile dropdowns not showing

--- a/recipe-minisite/styles.css
+++ b/recipe-minisite/styles.css
@@ -46,13 +46,6 @@
         padding: 0.75rem 1rem 1.25rem;
         font-size: 0.8rem;
     }
-
-    main img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
 }
 
 
@@ -118,12 +111,6 @@
     font-weight: bold;
 }
 
-/* Make images stay inside the content width */
-body.home-page main img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
 
 /* CSS for responsive menu demo */
 
@@ -261,7 +248,9 @@ nav > ul > li > ul > li:hover a {
         position: absolute;
     }
 
-    nav > ul > li.clicked > ul {
+    /* show submenu on click (for keyboard) OR hover (mouse) */
+    nav > ul > li.clicked > ul,
+    nav > ul > li:hover > ul {
         display: block;
         visibility: visible;
     }
@@ -282,24 +271,6 @@ nav > ul > li > ul > li:hover a {
 
 }
 
-
-/* ----- HOVER DROPDOWNS (desktop) ----- */
-
-nav > ul > li {
-    position: relative;
-}
-
-nav ul li ul {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background: #777;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    min-width: 180px;
-}
 
 /* show submenu on hover (desktop) */
 nav ul li:hover > ul {
